--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+</html>
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+
+<div ng-app="app" ng-init="chaine1='ma chaine de char';chaine2='iiiiiiiiiiiiii'">
+    {{chaine1}}
+</div>
     Demat breizhouz
+    <input type="text" disabled="disabled" id="">
+    <script src="/node_modules/angular/angular.js"></script>
+    <script src="/app/app.js"></script>
 </body>
+
 </html>
