--- a/index.html
+++ b/index.html
@@ -9,15 +9,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Latest compiled and minified CSS & JS -->
+    <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="//code.jquery.com/jquery.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
 
-<div ng-app="app" ng-init="chaine1='ma chaine de char';chaine2='iiiiiiiiiiiiii'">
+    <!-- <div ng-app="app" ng-init="chaine1='ma chaine de char';chaine2='iiiiiiiiiiiiii'">
     {{chaine1}}
 </div>
     Demat breizhouz
-    <input type="text" disabled="disabled" id="">
+    <input type="text" disabled="disabled" id=""> -->
+    <div ng-app="app">
+
+        <nav class="navbar navbar-default" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Mon Shooping</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                </ul>
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </nav>
+
+        <div id="view-content">
+            <div class="produit">
+                <div class="col-lg-2">
+                    <h2> titre :</h2>
+                    Barratte 125
+                    <h3>Prix </h3>
+                    2.&euro;
+                    <h3>Desc :</h3>
+                </div>
+                <div class="col-lg-2">
+                    <img src="/img/barratte.jpg" alt="beurre sans sel" /><br />
+                    <button type="button" class="btn btn-info">Ajouter panier</button>
+                </div>
+            </div>
+        </div>
+        <div id="footer" style="text-align:center;position:absolute;bottom:0;left:0;right:0">2010 &copy;Orsys</div>
+    </div>
     <script src="/node_modules/angular/angular.js"></script>
     <script src="/app/app.js"></script>
 </body>
