--- a/index.html
+++ b/index.html
@@ -65,26 +65,63 @@
                 </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
-
+        <div class="panier" ng-controller="panierCtrl as panier">
+            <h2>Mon panier</h2>
+            <table style="width:100%">
+                <tr ng-repeat="obj in panier.arrayPanier" ng-click="onviewproduitclick(obj)" >
+                    <td><img style="max-height: 64px;max-width: 64px;" src="/img/{{obj.img}}" alt=""></td>
+                    <td>{{obj.nom}}</td>
+                    <td>{{obj.qty}}</td>
+                    <td>{{obj.prix* obj.qty | my_currency}}</td>
+                    <td>
+                    <button type="button" class="btn btn-warning" ng-click="panier.removeQuant(obj)">-</button>
+                    <button type="button" class="btn btn-primary" ng-click="panier.addQuant(obj)">+</button>
+                    </td>
+                </tr>
+            </table>
+            {{panier.arrayPanier|json}}
+        </div>
         <div id="view-content">
-            <div class="produit">
+            <div class="produits" ng-controller="produitsCtrl as prds">
+                <h2>Produits :</h2>
+                <div class="produits-produit" ng-repeat="prod in prds.arrayProduit">
+                    <img ng-src="/img/{{prod.img}}" style="max-height: 256px;max-width: 256px;" alt="">
+                    <div style="display:inline-block">{{prod.nom}} <br /> 
+                        <span style="color:skyblue">{{prod.prix|my_currency}}</span>
+                    </div>
+                    <div style="display:inline-block">
+                        <button type="button" class="btn btn-primary" ng-click="onviewproduitclick(prod)">Voir produit</button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="produit" ng-controller="produitCtrl as prd">
                 <div class="col-lg-2">
                     <h2> titre :</h2>
-                    Barratte 125
+                    {{prd.produit.nom}}
                     <h3>Prix </h3>
-                    2.&euro;
+                    {{prd.produit.prix|my_currency:2}}
+                    <!-- |limitTo:2 -->
                     <h3>Desc :</h3>
+                    {{prd.produit.desc}}
+                    {{prd.produit|json}}
                 </div>
                 <div class="col-lg-2">
-                    <img src="/img/barratte.jpg" alt="beurre sans sel" /><br />
-                    <button type="button" class="btn btn-info">Ajouter panier</button>
+                    <img ng-src="/img/{{prd.produit.img}}" alt="beurre sans sel" /><br />
+                    <button type="button" class="btn btn-info" ng-click="onaddcartclick(prd.produit)">Ajouter
+                        panier</button>
                 </div>
             </div>
         </div>
+        
         <div id="footer" style="text-align:center;position:absolute;bottom:0;left:0;right:0">2010 &copy;Orsys</div>
     </div>
     <script src="/node_modules/angular/angular.js"></script>
     <script src="/app/app.js"></script>
+    <script src="/app/currencyFilter/currencyFilter.js"></script>
+    <script src="/app/panierCtrl/panierCtrl.js"></script>
+    <script src="/app/produitsCtrl/produitsCtrl.js"></script>
+    <script src="/app/produitCtrl/produitCtrl.js"></script>
 </body>
 
 </html>
