ng-show sur les vues de ctrls

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
-        <div class="panier" ng-controller="panierCtrl as panier">
+        <div class="panier" ng-controller="panierCtrl as panier" ng-show="panier.arrayPanier.length > 0" >
             <h2>Mon panier</h2>
             <table style="width:100%">
                 <tr ng-repeat="obj in panier.arrayPanier track by $index" ng-click="onviewproduitclick(obj)" >
@@ -97,7 +97,7 @@
 
                 </div>
             </div>
-            <div class="produit" ng-controller="produitCtrl as prd">
+            <div class="produit" ng-controller="produitCtrl as prd" ng-show="prd.produit.id">
                 <div class="col-lg-2">
                     <h2> titre :</h2>
                     {{prd.produit.nom}}
